copy conditional formats correctly, fdo#63607

Change-Id: I80307944c5a9a873f972e6c349ec4fe48ae848e9